# SFML-platformer-C-

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Shooter3d.sln
.github/: pull_request_template.md
.github/workflows/: static-analyzer.yml
Shooter3d/: Resource.aps  Resource.rc  Shooter3d.vcxproj  Shooter3d.vcxproj.filters  Source.cpp  resource.h
docs/: index.md
src/: CMakeLists.txt  Functions.h  Map.h  SomeClasses.h  Source.cpp  View.h  main.cpp  texMap.h
src/entity/: CMakeLists.txt  enemy.cpp  enemy.hpp  ientity.hpp  player.cpp  player.hpp
src/gui/: button.hpp
src/levels/: level1.txt  level2.txt  level3.txt  level4.txt
src/map_loader/: CMakeLists.txt  imaploader.hpp  textmaploader.cpp  textmaploader.hpp
src/resource/: CMakeLists.txt
